opam-version: "1.2"
version: "0.2~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/mastodon-archive-viewer"
dev-repo: "git://github.com/kit-ty-kate/mastodon-archive-viewer.git"
bug-reports: "https://github.com/kit-ty-kate/mastodon-archive-viewer/issues"
tags: ["mastodon" "ActivityPub"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "containers"
  "ezjsonm"
  "ptime"
  "tyxml"
  "cmdliner"
]
depopts: [
  "ffmpeg"
]
conflicts: [
  "ffmpeg" {< "0.2"}
]
available: [ocaml-version >= "4.02.3"]
