opam-version: "2.0"
version: "0.3"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/mastodon-archive-viewer"
dev-repo: "git+https://github.com/kit-ty-kate/mastodon-archive-viewer.git"
bug-reports: "https://github.com/kit-ty-kate/mastodon-archive-viewer/issues"
tags: ["mastodon" "ActivityPub"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.1"}
  "containers" {>= "3.0"}
  "ezjsonm" {>= "1.0.0"}
  "ptime" {>= "1.0.0"}
  "tyxml" {>= "4.3.0"}
  "cmdliner" {>= "1.1.0"}
  "ffmpeg-av" {>= "1.0"}
]
synopsis: "View your Mastodon archive offline"
