(executable
  (name main)
  (public_name mastodon-archive-viewer)
  (flags :standard -safe-string -w A-44-33-4 -open Containers)
  (libraries
    containers
    ezjsonm
    ptime
    tyxml
    ffmpeg
    cmdliner))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|mastodon-archive-viewer|}\n")
      (echo "let version = {|%{version:mastodon-archive-viewer}|}\n"))))
